--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -54,6 +54,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
@@ -74,6 +75,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
@@ -94,6 +96,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
@@ -114,6 +117,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
@@ -134,6 +138,7 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
         <LinearLayout
@@ -153,6 +158,7 @@
             <ImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
+                android:layout_gravity="end"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_marginStart="20dp"/>
         </LinearLayout>
