--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -51,8 +51,8 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
@@ -72,8 +72,8 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
@@ -93,8 +93,8 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
@@ -114,8 +114,8 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
@@ -135,8 +135,8 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_gravity="end"
                 android:layout_marginStart="20dp"/>
@@ -156,8 +156,8 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"/>
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 android:layout_marginStart="20dp"/>
