--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imgBack"
+            android:id="@+id/img_Back"
             android:layout_width="45dp"
             android:layout_height="35dp"
             android:layout_marginTop="10dp"
