--- a/app/src/main/res/layout/activity_enter_otp_forget_password.xml
+++ b/app/src/main/res/layout/activity_enter_otp_forget_password.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/imgBack"
+            android:id="@+id/img_Back"
             android:layout_width="45dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
