--- a/app/src/main/res/layout/activity_enter_user_info_forget_password.xml
+++ b/app/src/main/res/layout/activity_enter_user_info_forget_password.xml
@@ -14,7 +14,7 @@
             android:layout_width="45dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:id="@+id/imgBack"
+            android:id="@+id/img_Back"
             android:layout_marginTop="10dp"/>
             <TextView
                 android:layout_width="wrap_content"
