--- a/app/src/main/res/layout/activity_order_info.xml
+++ b/app/src/main/res/layout/activity_order_info.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="20dp"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/imgBack"
+            android:id="@+id/img_Back"
             android:layout_width="40dp"
             android:layout_height="35dp"
             android:layout_marginTop="10dp"
