--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -19,7 +19,7 @@
                 android:layout_marginBottom="20dp"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:id="@+id/imgBack"
+                    android:id="@+id/img_Back"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginTop="10dp"
