--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="20dp"
             android:layout_height="wrap_content">
             <ImageView
-                android:id="@+id/imgBack"
+                android:id="@+id/img_Back"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_margin="8dp"
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="25dp"
-                android:layout_toEndOf="@id/imgBack"
+                android:layout_toEndOf="@id/img_Back"
                 android:background="@drawable/custom_editext"
                 android:drawableStart="@drawable/ic_baseline_search_24"
                 app:queryHint="Tìm kiếm"
