--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -13,7 +13,7 @@
         android:padding="10dp"
         android:orientation="vertical">
         <ImageView
-            android:id="@+id/imgBack"
+            android:id="@+id/img_Back"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginTop="10dp"
