--- a/app/src/main/res/layout/activity_slash_screen.xml
+++ b/app/src/main/res/layout/activity_slash_screen.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/ll_Slash"
+    >
 
     <ImageView
         android:layout_width="250dp"
