--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -174,6 +174,7 @@
                         android:id="@+id/radioDiscount"
                         android:buttonTint="#5051A2"
                         android:textColor="#5051A2"
+                        android:checked="true"
                         android:layout_centerVertical="true"/>
                 </RelativeLayout>
                 <RelativeLayout
@@ -221,6 +222,7 @@
                     android:layout_marginBottom="10dp"
                     android:buttonTint="#5051A2"
                     android:textColor="#5051A2"
+                    android:checked="true"
                     android:textSize="18sp" />
 
                 <TextView
